# QuestDBRouter

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.objectstorage.yaml  docker-compose.yml
.cargo/: config.toml
.cursor/rules/: project.mdc
config/: docker-quest-router-objectstorage.toml  docker-quest-router.toml  quest-router.toml
config/grafana/dashboards/: default.json  quest-router.json
config/grafana/provisioning/dashboards/: dashboards.yml
config/grafana/provisioning/datasources/: prometheus.yml
config/questdb/: jvm.options  server.conf  sysctl.conf
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  rust-something.code-workspace  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  chart-legend.ts  chart.ts  index.css  indicators.ts  main.ts  styles.css  types.ts  vite-env.d.ts  ws-client.ts
frontend/src/components/terminal/: chart-grid.tsx  chart-legend.tsx  chart-panel.tsx  charts-view.tsx  connection-status.tsx  global-controls.tsx  layout-picker.tsx  livestream-view.tsx  market-watchlist.tsx  overview-view.tsx  panel-stream-bridge.tsx  sidebar.tsx  stats-cards.tsx  stream-panel.tsx  terminal.tsx  top-bar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  switch.tsx  toggle-group.tsx
frontend/src/hooks/: use-live-chart.ts  use-topic-subscription.ts
frontend/src/lib/: utils.ts
frontend/src/lib/chart/: chart-bus.ts  grid-slots.ts  index.ts  indicators.ts  live-chart.ts  theme.ts
frontend/src/lib/ilp/: types.ts
frontend/src/lib/stream/: index.ts  stream-client.ts  topic.ts
frontend/src/providers/: StreamProvider.tsx  TerminalProvider.tsx
frontend/src/types/: terminal.ts
scripts/: build-release.sh  common.py  gen_nautilus_feather_fixture.py  init_ingest_tables.py  load_test.py  questdb_init_ingest_tables.sh  requirements.txt  rustfs_init.sh  setup-host-sysctl.sh  test_hash_skew.py  test_health_routing.py  test_joins.py  test_ohlcv.py  test_router.py  test_rustfs_ingest.py  test_stream.py  test_timeseries.py  verify_bitunix_ticks.py
scripts/fixtures/: trade_tick.feather
src/: lib.rs  main.rs
src/app/: mod.rs  state.rs
src/config/: mod.rs
src/federated/: aggregate.rs  arrow.rs  catalog.rs  error.rs  join.rs  mod.rs  pg_types.rs  provider.rs  scan.rs
src/ingest/: actor.rs  checkpoint.rs  events.rs  fetcher.rs  http.rs  mod.rs  nautilus.rs  reconcile.rs
src/logging/: mod.rs
src/metadata/: actor.rs  mod.rs  provider.rs  snapshot.rs
src/metrics/: mod.rs
src/pool/: error.rs  mod.rs  pg.rs
src/protocol/: ilp.rs  ilp_forward.rs  mod.rs  pg.rs  pg_backend.rs  pg_gateway.rs  pg_handlers.rs  pg_hook.rs  pg_session.rs  request_id.rs
src/routing/: dialect.rs  error.rs  keys.rs  mod.rs  plan.rs  ring.rs  router.rs  schema.rs  sql.rs
src/server/: mod.rs
src/stream/: control.rs  hub.rs  mod.rs  row.rs  topic.rs  ws.rs
tests/: ingest_rustfs.rs  pgwire_contract.rs  pgwire_live.rs  phase1_routing.rs
