[package]
name = "quest-router"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Transparent QuestDB sharding router (ILP writes, PG wire reads)"
rust-version = "1.89"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bytes = "1"
ahash = "0.8"
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
config = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
hashring = "0.3"
memchr = "2"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
pgwire = { version = "0.40", default-features = true, features = ["client-api-aws-lc-rs"] }
mimalloc = { version = "0.1", default-features = false, optional = true }

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]

[dev-dependencies]
tokio-test = "0.4"
